--- a/recipes/parmesan-chicken.html
+++ b/recipes/parmesan-chicken.html
@@ -24,6 +24,7 @@
         <li>½ cup grated provolone cheese</li>
         <li>2 teaspoons olive oil</li>
     </ul>
+    <h3>Steps</h3>
     <ol>
         <li>Preheat an oven to 450 degrees F (230 degrees C).</li>
         <li>Place chicken breasts between two sheets of heavy plastic (resealable freezer bags work well) on a solid, level surface. Firmly pound chicken with the smooth side of a meat mallet to a thickness of 1/2-inch. Season chicken thoroughly with salt and pepper.</li>
