--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/parmesan-chicken.html">Parmesan Chicken</a>
+    <a href="recipes/corned-beef.html">Corned Beef</a>
+    <a href="scrambled-eggs.html">Scrambled Eggs</a>
 </body>
 </html>
