Edited eggs link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/parmesan-chicken.html">Parmesan Chicken</a>
     <a href="recipes/corned-beef.html">Corned Beef</a>
-    <a href="scrambled-eggs.html">Scrambled Eggs</a>
+    <a href="recipes/scrambled-eggs.html">Scrambled Eggs</a>
 </body>
 </html>
