Added other recipes

--- a/recipes/scrambled-eggs.html
+++ b/recipes/scrambled-eggs.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Scrambled Eggs</title>
 </head>
 <body>
-    
+    <h1>Scrambled Eggs</h1>
+    <img src="" alt="">
+    <h3>Description</h3>
+    <p>Scrambled eggs is a dish made from eggs (usually chicken eggs) stirred, whipped or beaten together while <br>being gently heated, typically with salt, butter, oil and sometimes other ingredients.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Eggs</li>
+        <li>Milk, plant milk, or water</li>
+        <li>Extra-virgin olive oil or butter</li>
+        <li>Salt and Pepper</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>First, beat the eggs. Place them in a medium bowl, and whisk until the yolk and whites are thoroughly combined.</li>
+        <li>Add the milk or water, and whisk again! The beaten eggs should be an even yellow color, with no translucent spots or streaks.</li>
+        <li>Next, gently preheat the pan. Brush a small nonstick skillet with olive oil, or melt a little butter inside it. Warm the skillet over medium heat.</li>
+        <li>Finally, cook. Pour in the egg mixture, and let it cook for a few seconds, undisturbed. Then, pull a rubber spatula across the bottom of the pan to form large, soft curds of scrambled eggs.</li>
+        <li>Continue cooking over medium-low heat, folding and stirring the eggs every few seconds. As you work, make sure to scrape your spatula along the bottom and sides of the pan to continue to form curds and to prevent any part of the eggs from drying out.</li>
+        <li>For a soft, creamy scramble, stop when the eggs are mostly set, but a little liquid egg remains. Remove the pan from the heat, and season to taste with salt and pepper.</li>
+    </ol> 
 </body>
 </html>
