--- a/recipes/corned-beef.html
+++ b/recipes/corned-beef.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Corned Beef</title>
 </head>
 <body>
-    
+    <h1>Corned Beef</h1>
+    <img src="https://images.aws.nestle.recipes/resized/be8785116300fe2d5d6a1f5b871d5908_Ginisang_Corned_Beef_Main_944_531.jpg" alt="Corned Beef">
+    <h3>Description</h3>
+    <p>Corned beef, or salt beef in some of the Commonwealth of Nations, is salt-cured brisket of beef. The term <br> comes from the treatment of the meat with large-grained rock salt, also called "corns" of salt. Sometimes, <br>sugar and spices are added to corned beef recipes. Corned beef is featured as an ingredient in many cuisines.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>12 ounces canned corned beef</li>
+        <li>1 piece yellow onion sliced</li>
+        <li>1 piece baking potato diced </li>
+        <li>3 cloves garlic crushed</li>
+        <li>2 tablespoons cooking oil</li>
+        <li>3/4 cup beef stock or broth</li>
+        <li>1/2 teaspoon garlic powder</li>
+        <li>Salt and pepper to taste</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Heat the oil in a pan.</li>
+        <li>Sauté crushed garlic and onion.</li>
+        <li>Add the corned beef and then cook for 5 minutes.</li>
+        <li>Put-in potatoes, garlic powder, and beef stock. Stir and let boil. Cover and Cook for 6 to 8 minutes.</li>
+        <li>Add salt and pepper to taste.</li>
+        <li>Serve. Share and enjoy!</li>
+    </ol>
 </body>
 </html>
