--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/parmesan-chicken.html">Parmesan Chicken</a>
-    <a href="recipes/corned-beef.html">Corned Beef</a>
-    <a href="recipes/scrambled-eggs.html">Scrambled Eggs</a>
+    <ul>
+        <li><a href="recipes/parmesan-chicken.html">Parmesan Chicken</a></li>
+        <li><a href="recipes/corned-beef.html">Corned Beef</a></li>
+        <li><a href="recipes/scrambled-eggs.html">Scrambled Eggs</a></ul></li>        
 </body>
 </html>
